# FunBox

./: build.gradle  gradle.properties  readme.txt
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: demo.html
app/src/main/cpp/: ORM.c  native-lib.cpp
app/src/main/cpp/customer/: CustomerForTest.c  CustomerForTest.h  ORM.c
app/src/main/cpp/sound/: sound-lib.cpp
app/src/main/jni/: OMR.c  OMR.h
app/src/main/jni/soundtouch/: Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  libtool  soundtouch.pc
app/src/main/res/anim/: fragment_slide_left_enter.xml  scaning_anim.xml
app/src/main/res/drawable/: bottom_selector.xml  bottom_selector1.xml  logo_splash.xml  music_seekbar2.xml  voice_boby.xml  voice_man.xml  voice_wman.xml  voidce_biaozhuan.xml
app/src/main/res/layout/: activity_base.xml  activity_capture.xml  activity_splash.xml  app_bar_main.xml  content_main.xml  customer_notification.xml  dialog_color_picker.xml  dlna_fragment_playlist.xml  dlna_listview_device.xml  dlna_listview_device_items.xml  dlna_main_fragment.xml  edit_layout.xml  emall_spinner_item.xml  fragment_.xml  fragment_aidl.xml  fragment_ani.xml  fragment_annotations.xml  fragment_args.xml  fragment_audio.xml  fragment_beat.xml  fragment_broadcast.xml  fragment_call_system_camera.xml  fragment_camera.xml  fragment_camera2.xml  fragment_camera_function_list.xml  fragment_canvas.xml  fragment_circle_ani_progress.xml  fragment_color_picker.xml  fragment_color_picker_v.xml  fragment_coordinator_layout.xml  fragment_cpp.xml  fragment_cut_view.xml  fragment_disk_lru.xml  fragment_facere_congnitioon.xml  fragment_fade.xml  fragment_ffmpeg4_android.xml  fragment_filechooser.xml  fragment_fingerprint.xml  fragment_gesture_detector.xml  fragment_green_dao.xml  (+65 more)
(+760 files in other folders)
